# eip712-signer

./: .gitignore  Cargo.toml  README.md
src/: main.rs  sign_data.rs
