[package]
name = "eip712-signer"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dotenv = "0.15.0"
ethers = "2.0.7"
ethers-core = "2.0.7"
ethers-signers = "2.0.7"
fs = "0.0.5"
serde = "1.0.171"
serde_json = "1.0.100"
actix-web = "4"
